# epl-fantasy-forward

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml
app/: __init__.py  main.py
app/core/: supabase_client.py
app/db/: __init__.py  database.py  init_db.py  models.py
app/schemas/: user.py
backend/: README.md
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  squads.py
backend/app/core/: config.py  security.py
backend/app/schemas/: squad.py
